kube/base/saleor/saleor-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saleor-api
  template:
    metadata:
      labels:
        app: saleor-api
      annotations:
        instrumentation.opentelemetry.io/inject-python: "saleor-instrumentation" 
    spec:
      containers:
        - name: api
          image: k3d-higiliqs.local:12345/saleor:3.20.80
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "1024Mi"
              cpu: "250m"
            limits:
              memory: "2048Mi"
              cpu: "500m"
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 10
            timeoutSeconds: 10
