kube/base/saleor/saleor-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: saleor-api
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: saleor-api
