kube/base/saleor/saleor-worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: saleor-worker
  template:
    metadata:
      labels:
        app: saleor-worker
      annotations:
        instrumentation.opentelemetry.io/inject-python: "worker-instrumentation" 
    spec:
      restartPolicy: Always
      containers:
      - name: saleor-worker
        image: saleor
        imagePullPolicy: Always
        command:
          - celery
        args:
          - --app=saleor.celeryconf:app
          - worker
          - -E
          - --max-tasks-per-child=10
          - --concurrency=4
          - --max-memory-per-child=524288
          - --loglevel=info
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-beat
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: saleor-beat
  template:
    metadata:
      labels:
        app: saleor-beat
      annotations:
        instrumentation.opentelemetry.io/inject-python: "worker-instrumentation" 
    spec:
      restartPolicy: Always
      containers:
      - name: saleor-beat
        image: saleor
        imagePullPolicy: Always
        command:
          - celery
        args: 
          - --app=saleor.celeryconf:app
          - beat
          - --scheduler=saleor.schedulers.schedulers.DatabaseScheduler
          - --loglevel=info
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-flower
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: saleor-flower
  template:
    metadata:
      labels:
        app: saleor-flower
    spec:
      restartPolicy: Always
      containers:
      - name: saleor-flower
        image: saleor
        imagePullPolicy: Always
        command:
          - celery
        args: 
          - --app=saleor.celeryconf:app
          - flower
          - --enable_events
        ports:
        - containerPort: 5555
          name: flower
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: saleor-flower
  labels:
    app: saleor-flower
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "5555"
    prometheus.io/path: "/metrics"
spec:
  ports:
  - port: 5555
    targetPort: 5555
    name: flower
  selector:
    app: saleor-flower
