kube/base/saleor/saleor-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: api.higiliquidos.deti.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saleor-external
                port:
                  number: 80
